--- a/src/app/views/views.component.css
+++ b/src/app/views/views.component.css
@@ -8,7 +8,7 @@
 }
 
 .carousel-item:nth-child(1) {
-    background-image: url('https://fondosmil.co/fondo/56873.jpg');
+    background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -26,5 +26,3 @@
 .navbar .nav-link {
     color: #fff !important;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
